# gtk-fortran

./: .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  Doxyfile  FindGTK3.cmake  INSTALL  INSTALL.md  README  README-high-level  README-high-level.md  README.md  VERSIONS  codemeta.json  fpm.toml  meson.build  paper.bib  paper.md  win32_build.bat  win32_install.bat
.github/ISSUE_TEMPLATE/: bug_report.md
cmake/: CheckFortranSourceCompiles.cmake  DefaultFlags.cmake  FindGTK3.cmake  FindPlplotF95.cmake  README.md  cmake_uninstall.cmake.in
examples/: CMakeLists.txt  README  README.md  bazaar.f90  cairo-basics-click.f90  cairo-basics.f90  cairo-tests.f90  gio_demo.f90  gtkbuilder.cmb  gtkbuilder.f90  gtkbuilder.glade  gtkbuilder.ui  gtkbuilder2.f90  gtkhello.f90  gtkhello2.f90  gtkzero.f90  gtkzero_gapp.f90  hl_assistant.f90  hl_cairo1.f90  hl_cairo_clock.f90  hl_cairo_viewer.f90  hl_choosers.f90  hl_combo.f90  hl_containers.f90  hl_dialog.f90  hl_infobar.f90  hl_list1.f90  hl_list_n.f90  hl_list_renderers.f90  hl_menu.f90  hl_pbar.f90  hl_pbar_p.f90  hl_radio.f90  hl_sliders.f90  hl_sliders2.f90  hl_textview.f90  hl_tree.f90  julia_pixbuf.f90  list_demo.f90  mandelbrot.f90  (+12 more)
graphics/gtk_extra/: README  README.md  cfwrapper-errors.txt  cfwrapper-type_errors.txt  cfwrapper_gtkextra.py  gtk-fortran-index.csv  gtkextra-auto.diff  gtkextra-auto.f90  gtkextra-auto.f90.raw  gtkextra_plot.f90  gtkextraenums-auto.f90
graphics/plplot/: Makefile  README  hl_plplot1.f90  hl_plplot17e.f90  hl_plplot1e.f90  hl_plplot30e.f90  hl_plplot8.f90  hl_plplot8e.f90  plplot_extra.f90
logo/: README.md
plplot/: CMakeLists.txt  README  README.md  hl_plplot17e.f90  hl_plplot17e_gto.f90  hl_plplot1e.f90  hl_plplot1e_old.f90  hl_plplot30e.f90  hl_plplot4e.f90  hl_plplot4e_old.f90  hl_plplot8e.f90  meson.build  plplot_extra.f90  plplot_extra_ndef.f90  plplot_plsmema.pat
screenshots/: README.md  bazaar_about_box.tiff  cairo-basics_MacOSX.tiff  julia_pixbuf.tiff
sketcher/: CMakeLists.txt  README.md  default.options  example.glade  gtkf-sketcher.F90  gtkf-sketcher.f90  gtkf-sketcher.glade  meson.build
sketcher/data/: apache2.0.lic  bsd.lic  freeware.lic  gnu-gpl-v2.lic  gnu-gpl-v3.lic  gnu-lgpl-v2.1.lic  gnu-lgpl-v2.lic  meson.build  zlib.lic
sketcher/example/: meson.build
src/: CMakeLists.txt  README.md  alt_build_test.sh  api_compatibility.f90  atk-auto.f90  build.sh  cairo-auto.f90  cairo.f90  cfwrapper.py  extract_enums.pl  extract_events.pl  extract_hl_doc.py  gdk-auto.f90  gdk-pixbuf-auto.f90  gdk-pixbuf-hl.f90  gdkevents-auto.f90  gdkevents-auto2.f90  gdkevents-auto3.f90  glib-auto.f90  graphene-auto.f90  gsk-auto.f90  gtk-2-fortran.pc.in  gtk-3-fortran.pc.in  gtk-auto.f90  gtk-auto.in  gtk-auto.inc  gtk-draw-hl-tmpl.f90  gtk-draw-hl.f90  gtk-enumerators.lis  gtk-fortran-hash.pkl  gtk-fortran-index.csv  gtk-fortran-modscan.man  gtk-fortran.f90  gtk-fortran.pc.in  gtk-fortran_funptr.csv  gtk-fortran_types.csv  gtk-hl-accelerator-tmpl.f90  gtk-hl-accelerator.f90  gtk-hl-assistant-tmpl.f90  gtk-hl-assistant.f90  (+49 more)
src/cfwrapper/: README.md  analyze.py  cfwrapper.py  cleaning.py  enums.py  errors.py  fortran.py  globals_const.py  gtk-fortran-hash.pkl  lib_versions.py  run_tests.py  scan_types_and_enums.py  stats.py  tools.py
test/: CMakeLists.txt  README.md  run_all.pl
tutorials/: README.md  my_first_gtk_app1.f90  my_first_gtk_app2.f90  my_first_gtk_app3.f90  my_first_gtk_app4.f90  my_first_gtk_app5.f90  my_first_gtk_app6.f90  my_first_gtk_app7.f90
